trunk/Archive/28b6a236463ea287806ef64359a35e59-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:64:7: error: ‘struct File<1u>’ has no member named ‘write’
     r.write();
       ^
main.cpp:65:8: error: ‘struct File<3u>’ has no member named ‘run’
     rw.run();
        ^
